vitrail-pg-macros/tests/ui/fail/update_not_without_variables.stderr
error: update filters using `eq(...)`, `in(...)`, or `not(...)` require `#[vitrail(variables = YourVariablesType)]`
  --> tests/ui/fail/update_not_without_variables.rs:28:8
   |
28 | struct PublishPostsByExcludedTitle;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `PublishPostsByExcludedTitle: vitrail_pg_core::UpdateManyModel` is not satisfied
  --> tests/ui/fail/update_not_without_variables.rs:31:49
   |
31 |     let _ = crate::update_schema::update_many::<PublishPostsByExcludedTitle>(
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::UpdateManyModel` is not implemented for `PublishPostsByExcludedTitle`
  --> tests/ui/fail/update_not_without_variables.rs:28:1
   |
28 | struct PublishPostsByExcludedTitle;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `update_many`
  --> tests/ui/fail/update_not_without_variables.rs:5:1
   |
 5 | / schema! {
 6 | |     name update_schema
 7 | |
 8 | |     model post {
...  |
13 | | }
   | |_^ required by this bound in `update_many`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PublishPostsByExcludedTitle: vitrail_pg_core::UpdateManyModel` is not satisfied
  --> tests/ui/fail/update_not_without_variables.rs:32:9
   |
32 |         PublishPostsData { published: true },
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::UpdateManyModel` is not implemented for `PublishPostsByExcludedTitle`
  --> tests/ui/fail/update_not_without_variables.rs:28:1
   |
28 | struct PublishPostsByExcludedTitle;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
